--- a/macos/extension/info.plist
+++ b/macos/extension/info.plist
@@ -21,6 +21,9 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 MFatihMAR. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
-	<dict/>
+	<dict>
+		<key>com.apple.kpi.libkern</key>
+		<string>13.0.0</string>
+	</dict>
 </dict>
 </plist>
